src/htdocs/css/features/util/_earthquakes.scss
@use '../../util/opt/mixins' as *;
@use '../../util/opt/variables' as *;

@layer default {
  #plots-pane,
  #summary-pane {
    label {
      color: var(--text-color-lighter);
      margin-left: 1rem;
    }

    .description {
      font-size: 1.125rem;
      line-height: 1.5;
      margin: 0;
    }

    .filter {
      align-items: center;
      display: flex;
      flex-direction: row-reverse;
      justify-content: flex-end;
      margin-top: -.5rem;
    }
  }

  #plots-pane {
    output:after {
      content: ' km';
    }

    .filter {
      justify-content: center;
      margin-top: -1rem;

      &.hide {
        display: none;
      }
    }

    .timestamp {
      margin-top: 0;
    }
  }

  #summary-pane {
    h3.mag {
      margin-left: .25em; // account for collapse of whitespace by display:flex
    }

    table.m0 tr.m0,
    table.m1 tr.m1,
    table.m2 tr.m2,
    table.m3 tr.m3,
    table.m4 tr.m4,
    table.m5 tr.m5,
    table.m6 tr.m6,
    table.m7 tr.m7,
    table.m8 tr.m8,
    table.m9 tr.m9 {
      display: table-row;
    }

    tr.m0,
    tr.m1,
    tr.m2,
    tr.m3,
    tr.m4,
    tr.m5,
    tr.m6,
    tr.m7,
    tr.m8,
    tr.m9 {
      display: none;
    }

    .bin {
      margin: 1.25rem 0 1rem;

      td {
        &:not(:first-child) {
          text-align: right;
        }

        &.total {
          background: var(--bg-color-darker);
        }
      }

      th {
        &.rowlabel {
          border-right: 1px solid var(--border-color);
        }

        &.type {
          border-bottom: 1px solid var(--border-color-lighter);
          font-weight: normal;
          padding-right: .125rem;
          text-align: right;
          text-transform: capitalize;
        }
      }

      tr:first-child {
        border-bottom: 1px solid var(--border-color);
      }
    }

    .bins {
      display: flex;
      flex-wrap: wrap;
      margin-bottom: -1rem;

      table {
        margin-right: 2rem;

        &:last-child {
          margin-right: 0;
        }
      }
    }

    .hide-month .month,
    .hide-year .year {
      display: none; // elapsed time is less than previous bin column's duration
    }

    .list {
      &.sortable th {
        @include hover-effect;
      }

      tbody tr {
        transition: $effect-duration ease-in-out {
          property: background, color;
        };

        &:hover,
        &.selected {
          background: var(--accent-color-lightest);
          color: var(--text-color-darker);
          cursor: pointer;
          transition-duration: $effect-on-duration;
        }

        &:active {
          background: var(--accent-color);
          color: var(--bg-color);
          transition-duration: $effect-on-duration;
        }
      }

      td {
        &.depth,
        &.distance,
        &.mag {
          text-align: right;
        }

        &.distance span { // direction
          display: inline-block;
          text-align: left;
          width: 1.5rem;
        }
      }

      th {
        &.sort-header:hover {
          span:after,
          span:before {
            border-color: var(--text-color) transparent; // sort arrows
          }
        }

        &.sort-header span:after,
        &.sort-header span:before {
          border-color: var(--text-color-lighter) transparent; // sort arrows
        }

        em {
          font-style: normal;
          font-weight: normal;
        }
      }

      .tz {
        display: none;
      }
    }

    .sort-header {
      color: var(--text-color-lighter); // override tablesort's default
    }

    .timestamp {
      margin-top: 1.25rem;
    }

    @media only screen and (max-width: $breakpoint-phone-width) {
      .list {
        position: relative;
        width: 100%;

        tbody {
          border-top: 1px solid var(--border-color-lighter);
        }

        // Reflow table content
        td {
          display: block;
          padding: 0 1rem;

          &.depth {
            float: right;
            margin-top: -.75rem;
            padding-right: .25rem;
          }

          &.distance {
            font-size: $font-size-smaller;
            padding-bottom: .25rem;
            text-align: left;

            &:after {
              content: ' of Mainshock';
            }

            span {
              width: auto;
            }
          }

          &.eqid,
          &.location {
            display: none;
          }

          &.mag {
            float: left;
            font-size: 1.25rem;
            margin-top: .375rem;
            padding-left: .25rem;
            text-align: center;

            span {
              display: block;
              font-size: $font-size-smaller;
              font-weight: 300;
              line-height: 1;
            }
          }

          &.userTime,
          &.utcTime {
            padding-top: .25rem;
          }
        }

        // Unexpanded sort options select menu
        th {
          display: none;
          font-weight: normal;

          &.sort-down,
          &.sort-up {
            border-bottom: 1px solid var(--accent-color);
            display: inline-block; // show current sorted-by field only
            padding: 0;

            &:before {
              color: var(--text-color-lighter);
              content: 'Sort by: ';
              text-transform: none;
            }
          }

          abbr {
            border-bottom: none;
          }

          span:before {
            display: none; // hide sort order arrow's hover state
          }
        }

        thead tr {
          border: none;
        }

        // Expanded sort options select menu (must follow unexpanded rules)
        &.show-menu {
          th {
            border-bottom: none;
            display: block;
            padding: .5rem 1.5rem;
            position: relative;
            text-align: left;
            transition: $effect-duration ease-in-out {
              property: background, color;
            };

            &:before {
              content: ''; // remove 'Sort by:' text
            }

            &:hover,
            &:focus {
              background: var(--accent-color-lightest);
              color: var(--text-color-darker);
              transition-duration: $effect-on-duration;

              span:before {
                display: inline; // sort arrows
              }
            }

            &:active {
              background: var(--accent-color);
              color: var(--bg-color);
              transition-duration: $effect-on-duration;

              // Sort arrows
              span {
                &:after {
                  border-bottom-color: var(--accent-color-lightest);
                  border-top-color: var(--accent-color-lightest);
                  opacity: .4;
                }

                &:before {
                  border-bottom-color: var(--bg-color);
                  border-top-color: var(--bg-color);
                  opacity: 1;
                }
              }
            }

            &:is(.sort-down, .sort-up):after {
              content: '✔';
              left: .35rem;
              position: absolute;
              top: .5rem;
            }

            &.distance {
              border-radius: 0 0 $button-border-radius $button-border-radius;
            }
          }

          thead tr {
            background: var(--bg-color-alpha);
            border: 1px solid var(--accent-color);
            border-radius: $button-border-radius;
            box-shadow: 4px 4px 4px 0 var(--shadow-color);
            cursor: pointer;
            left: 0;
            position: absolute;
            top: -1.625rem;

            &:after {
              @include close-button;

              content: '×';
            }

            &:before {
              color: var(--text-color-lighter);
              content: 'Sort by:';
              display: block;
              font-family: $font-family-headers;
              padding: .25rem 0 .25rem .375rem;
            }

            &.hover:after { // close button
              background: var(--accent-color-lightest);
            }

            &.active:after { // close button
              background: var(--accent-color);
              color: var(--bg-color);
            }
          }

          .eqid,
          .location {
            display: none;
          }
        }
      }
    }
  }

  // Earthquake details in map Popups and SelectBar
  .earthquake {
    position: relative;

    &:is(.catalog-search, .mainshock) .distance {
      display: none;
    }

    &:not(.mainshock) .status {
      display: none;
    }

    &.mainshock button {
      display: none;
    }

    button {
      bottom: 0;
      position: absolute;
      right: -.25rem;

      &:after {
        content: 'Earthquake';
      }
    }

    dd.status {
      text-transform: capitalize;

      i {
        margin-left: .25rem;
      }
    }

    .time {
      display: flex;
      flex-direction: column;
    }
  }
}

